--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -5,11 +5,22 @@
   src: url("../public/fonts/Gilroy-ExtraBold.otf");
 }
 
-html,
-body {
+* {
   padding: 0;
   margin: 0;
   box-sizing: border-box;
+}
+
+::-moz-selection { /* Code for Firefox */
+  background: #b0ff00;
+}
+
+::selection {
+  background: #b0ff00;
+}
+
+html,
+body {
   font-family: "Inter", -apple-system, BlinkMacSystemFont, Segoe UI, Roboto, Oxygen,
     Ubuntu, Cantarell, Fira Sans, Droid Sans, Helvetica Neue, sans-serif;
 }
@@ -23,6 +34,7 @@ body {
   padding: 0 8vw;
   height: 100vh;
   background: linear-gradient(0deg, #F6F6F6 0%, #f0eaff 80%);
+  background-attachment: fixed;
 }
 
 a {
@@ -32,4 +44,17 @@ a {
 
 * {
   box-sizing: border-box;
+}
+
+@media screen and (max-width: 1440px) {
+  :root {
+    font-size: 14px;
+  }
+}
+
+
+@media screen and (max-width: 1024px) {
+  :root {
+    font-size: 12px;
+  }
 }
