--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -2,7 +2,7 @@
 
 @font-face {
   font-family: Gilroy;
-  src: url("../public/fonts/Gilroy-ExtraBold.otf");
+  src: url("../../public/fonts/Gilroy-ExtraBold.otf");
 }
 
 * {
@@ -26,6 +26,7 @@ body {
 }
 
 #__next {
+  position: relative;
   width: 100%;
   height: 100%;
 }
@@ -33,6 +34,7 @@ body {
 body {
   padding: 0 8vw;
   height: 100vh;
+  width: 100vw;
   background: linear-gradient(0deg, #F6F6F6 0%, #f0eaff 80%);
   background-attachment: fixed;
 }
